# youtube-helper

./: .gitignore  .vercelignore  README.md  deploy.sh  render.yaml  requirements.txt  vercel.json  youtube-helper.service
app/: README.md  (+1 more)
server/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  schemas.py  youtube-helper.service
server/api/v1/: chat.py  endpoints.py  router.py  summarize.py  transcript.py
server/app/: config.py  exceptions.py  main.py  schemas.py
server/app/routers/: chat.py  summarize.py  transcript.py
server/app/schemas/: chat.py  summarize.py  transcript.py
server/app/services/: chat.py  gemini.py  gemini_service.py  summarize.py  transcript.py  transcript_service.py  youtube.py
server/app/utils/: exceptions.py  youtube_parser.py
server/models/: schemas.py
server/routers/: api_v1.py  chat.py  summarize.py  transcript.py
server/schemas/: __init__.py  chat.py  models.py  summarize.py  transcript.py
server/server/: config.py  main.py
server/server/models/: schemas.py
server/server/routers/: chat.py  summarize.py  transcript.py  v1.py
server/server/services/: ai.py  gemini_service.py  transcript_service.py  youtube.py
server/server/tests/: test_api.py
server/services/: ai.py  chat.py  gemini.py  gemini_service.py  summarizer.py  transcript.py  transcript_service.py  youtube.py  youtube_service.py
server/tests/: conftest.py  test_api.py  test_chat.py  test_endpoints.py  test_schemas.py  test_services.py  test_summarize.py  test_transcript.py  test_youtube.py
server/tests/integration/: test_chat_api.py  (+2 more)
(+246 files in other folders)
